@@ -1,23 +1,26 @@
-package com.example.product.config; // Hoặc package chứa lớp SecurityConfig của bạn
+package com.example.product.config;
 
-// CÁC IMPORT CẦN THIẾT CHO LOGGER VÀ POSTCONSTRUCT
+import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import jakarta.annotation.PostConstruct;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod; // Cần import HttpMethod
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.oauth2.jose.jws.MacAlgorithm;
+import org.springframework.security.oauth2.jwt.JwtDecoder;
+import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource; // Đảm bảo import đúng
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import javax.crypto.SecretKey;
+import javax.crypto.spec.SecretKeySpec;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -25,63 +28,73 @@ public class SecurityConfigProduct {
 
     private static final Logger logger = LoggerFactory.getLogger(SecurityConfigProduct.class);
 
-    @Value("${app.static-resource.public-path-pattern}")
-    private String publicImagesPathPattern; // Sẽ có giá trị là /product-images/**
+    // Pattern phục vụ ảnh: /product-images/**
+    @Value("${app.static-resource.public-path-pattern:/product-images/**}")
+    private String publicImagesPathPattern;
 
-    // Danh sách các endpoint công khai
-    // publicImagesPathPattern đã được xử lý riêng, có thể không cần đưa vào đây nữa
-    // nếu PUBLIC_ENDPOINTS chỉ dành cho các API endpoints khác.
-    private final String[] PUBLIC_ENDPOINTS = {
-            "/api/v1/**",
-            "/api/v1/products/**",    // Bao gồm tất cả HTTP methods cho products (cân nhắc chỉ cho phép GET nếu không cần xác thực cho POST/PUT/DELETE)
-            "/api/v1/categories/**",  // Bao gồm tất cả HTTP methods cho categories (tương tự, cân nhắc chỉ GET)
-            // "/product-images/**" // Đã được xử lý bởi publicImagesPathPattern, có thể bỏ ở đây để tránh trùng lặp và rõ ràng hơn
-    };
+    // 🔑 Dùng đúng key trong application.properties:
+    // jwt.signerKey=!TJXchW5FLOeSBb63Kck+DFHTaRpWL4JUGcWFgWxUG5S1F/ly/LgJxHnMQaF46A/i
+    @Value("${jwt.signerKey}")
+    private String jwtSignerKey;
 
-    @PostConstruct // Đảm bảo phương thức này chạy sau khi dependency injection
-    public void displayInjectedValues() {
-        logger.info("Giá trị publicImagesPathPattern được inject trong SecurityConfigProduct: '{}'", publicImagesPathPattern);
+    @PostConstruct
+    public void init() {
+        logger.info("Giá trị publicImagesPathPattern trong SecurityConfigProduct: '{}'", publicImagesPathPattern);
+    }
+
+    // ✅ Bean JwtDecoder – HS512, khớp với token của bạn (alg=HS512)
+    @Bean
+    public JwtDecoder jwtDecoder() {
+        SecretKey key = new SecretKeySpec(
+                jwtSignerKey.getBytes(StandardCharsets.UTF_8),
+                "HmacSHA512" // tương ứng HS512
+        );
+
+        return NimbusJwtDecoder
+                .withSecretKey(key)
+                .macAlgorithm(MacAlgorithm.HS512)
+                .build();
     }
 
     @Bean
-    public SecurityFilterChain filterChainProduct(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity
+    public SecurityFilterChain filterChainProduct(HttpSecurity http) throws Exception {
+        http
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(AbstractHttpConfigurer::disable) // Tắt CSRF (cân nhắc kỹ cho môi trường production)
-                .authorizeHttpRequests(request ->
-                        request
-                                // Cho phép GET request đến đường dẫn phục vụ ảnh
-                                .requestMatchers(HttpMethod.GET, publicImagesPathPattern).permitAll()
-                                .requestMatchers("/api/v1/products/store/**").permitAll() // Cho phép truy cập công khai
-                                .requestMatchers(HttpMethod.PUT, publicImagesPathPattern).permitAll()
-                                .requestMatchers(HttpMethod.GET, "api/v1/products").permitAll()
-                                // .requestMatchers(publicImagesPathPattern).permitAll() // Dòng này thừa nếu đã có dòng trên và publicImagesPathPattern chỉ dành cho ảnh
-                                .requestMatchers(PUBLIC_ENDPOINTS).permitAll() // Cho phép các endpoint công khai khác
-                                .anyRequest().authenticated() // Tất cả các yêu cầu khác cần được xác thực
-                );
-        return httpSecurity.build();
+                .authorizeHttpRequests(auth -> auth
+                        // Ảnh public không cần token
+                        .requestMatchers(publicImagesPathPattern).permitAll()
+
+                        // Nếu muốn mở GET product public cho khách vãng lai thì thêm:
+                        // .requestMatchers(HttpMethod.GET, "/api/v1/products/**").permitAll()
+
+                        // Các request còn lại yêu cầu JWT
+                        .anyRequest().authenticated()
+                )
+                // Resource server JWT – sẽ tự dùng bean jwtDecoder() ở trên
+                .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> {}));
+
+        return http.build();
     }
 
+    // CORS cho frontend
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // Nếu muốn cho phép các origin cụ thể:
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://127.0.0.1:5500",
-                "http://localhost:5500",
-                "http://192.168.0.29:3000" // Frontend LAN
-                // "http://192.168.0.29:8081" // Thường không cần nếu frontend và backend cùng origin khi gọi từ frontend
-        ));
-        // HOẶC nếu muốn cho phép TẤT CẢ các origin (thường dùng cho dev, cẩn thận với production):
-        // configuration.setAllowedOriginPatterns(List.of("*"));
+        CorsConfiguration config = new CorsConfiguration();
 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*")); // Cho phép tất cả các header
-        configuration.setAllowCredentials(true); // Cho phép gửi cookie và thông tin xác thực
-        configuration.setMaxAge(3600L); // Thời gian pre-flight request được cache (giây)
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5500",
+                "http://127.0.0.1:5500",
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "*"
+        ));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Áp dụng cấu hình CORS cho tất cả các path
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
